# deepagents_chat_poc

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  observability.py  runtime.py
backend/app/api/: conversations.py  errors.py  health.py  human_loop.py  router.py  skills.py  tools.py
backend/app/chat/: agent.py  events.py  prompts.py  retry.py  schemas.py  service.py  sse.py
backend/app/human_loop/: config.py  schemas.py  store.py
backend/app/metadata/: frontmatter.py
backend/app/skills/: loader.py  schemas.py
backend/app/storage/: conversations.py
backend/app/tools/: loader.py  schemas.py
backend/tests/: test_agent_retry.py  test_agent_skills.py  test_api.py  test_chat_service.py  test_config.py  test_frontmatter.py  test_human_loop.py  test_observability.py  test_prompts.py  test_runtime.py  test_skills_loader.py  test_sse.py  test_storage.py  test_storage_conversations.py  test_tools_loader.py
docs/superpowers/plans/: 2026-06-02-lightweight-chat-system.md  2026-06-04-agent-reasoning-trace.md  2026-06-04-api-router-refactor.md  2026-06-04-backend-stream-naming-refactor.md  2026-06-04-on-demand-skill-loading.md  2026-06-04-operational-logging.md  2026-06-04-system-prompt-loading.md  2026-06-05-agent-retry-hardening.md  (+1 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  styles.css
openspec/: README.md  project.md
prompts/: system.md
skills/: README.md
skills/requirement-analysis/: SKILL.md
tools/: README.md
tools/current-time/: TOOL.md  tool.py
(+69 files in other folders)
