[project]
name = "deepagents-chat-backend"
version = "0.1.0"
description = "Lightweight FastAPI backend for a DeepAgents chat system"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.0.12rc2",
  "fastapi>=0.115.0",
  "langchain-openai>=0.3.0",
  "pydantic-settings>=2.6.0",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
